disable actions wrapping for tree item and fix a11y test failure

--- a/src/internal/components/structured-item/styles.scss
+++ b/src/internal/components/structured-item/styles.scss
@@ -34,6 +34,10 @@
   .disable-paddings > .main > & {
     column-gap: 0;
   }
+
+  &.disable-actions-wrapping {
+    flex-wrap: nowrap;
+  }
 }
 
 .content {
